--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
         "babel-preset-react": "^6.24.1",
         "css-loader": "^1.0.1",
         "html-webpack-plugin": "^3.2.0",
+        "react-redux": "^5.1.0",
+        "react-router": "^4.3.1",
+        "react-router-dom": "^4.3.1",
+        "redux": "^4.0.1",
+        "redux-logger": "^3.0.6",
         "style-loader": "^0.23.1",
         "url-loader": "^1.1.2",
         "webpack": "^4.23.1",
